test cases were added